<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home_fragment"
            android:icon="@drawable/e_learning"
            android:title="@string/nav1" />
        <item
            android:id="@+id/nav_quiz_fragment"
            android:icon="@drawable/ic_classsroom"
            android:title="@string/nav2" />
        <item
            android:id="@+id/nav_quizHistory_fragment"
            android:icon="@drawable/ic_report"
            android:title="@string/nav3" />
        <item
            android:id="@+id/nav_setting_fragment"
            android:icon="@drawable/ic_sett"
            android:title="@string/nav4" />
        <item
            android:id="@+id/nav_about_fragment"
            android:icon="@drawable/ic_about"
            android:title="@string/nav5" />


    </group>
</menu>