<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar"></include>


    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        card_view:cardCornerRadius="5dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="25"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/main_icon" />


                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="@android:color/white" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="55"
                android:gravity="center"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/edtUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="@string/hintUsername"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="@string/hintPassword"
                    android:inputType="textPassword" />

                <Button
                    android:id="@+id/btnLogin"
                    style="@style/ButtonShade"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:onClick="Login"
                    android:text="@string/login" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="20"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:clickable="true"
                    android:onClick="ClickSignUp"
                    android:padding="5dp"
                    android:text="@string/textsignup"
                    android:textColor="@color/colorAccent"
                    android:textSize="15dp" />

                <View
                    android:layout_width="2dp"
                    android:layout_height="10dp"
                    android:background="@android:color/darker_gray"></View>

                <TextView
                    android:id="@+id/tvTerm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:clickable="true"
                    android:onClick="ClickTerm"
                    android:padding="5dp"
                    android:text="@string/textPrivacy"
                    android:textColor="@color/colorAccent"
                    android:textSize="15dp" />
            </LinearLayout>


        </LinearLayout>


    </android.support.v7.widget.CardView>


</LinearLayout>
